# 42cli

./: .gitignore  LICENSE  README.md  README.rst  definitions.py  pyproject.toml  test.sh
.circleci/: c.yml  config.yml
42cli/: api.py  authorize.py  config.py  const.py  exception.py  init.py  main.py  project.py  show_username.py  status.py  util.py
fortytwocli/: api.py  authorize.py  const.py  init.py  ipCalc.py  main.py  project.py  status.py  util.py
tests/: test_authorize.py  test_config.py  test_example.py  test_init.py  test_project.py
